# api-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  alembic.ini  docker-compose.hatchet.yml  docker-compose.otel.yml  docker-compose.yml  pyproject.toml
.github/actions/setup-python/: action.yml
.github/prompts/: multiple_brokers.md
.github/workflows/: docker_push.yml  package.yml  test.yml
api-shared/: Makefile  pyproject.toml
api-shared/configs/: brokers.yml
api-shared/src/api_shared/: broker.py  hatchet_client.py
api-shared/src/api_shared/core/: settings.py  telemetry.py
api-shared/src/api_shared/middlewares/: dashboard.py  task_status.py
api-shared/src/api_shared/services/redis/: deps.py  lifespan.py
api-shared/src/api_shared/tasks/: complex_task.py  dummy.py  failing_task.py  ml_tasks.py  pydantic_parse_task.py  redis.py
api-shared/src/api_shared/tasks/general/: __init__.py  complex_task.py  dummy.py  failing_task.py  pydantic_parse_task.py  redis.py
api-shared/src/api_shared/tasks/ml/: __init__.py  ml_tasks.py
api-shared/src/api_shared/tasks/workers/: __init__.py  complex_task.py  dummy.py  failing_task.py  pydantic_parse_task.py  redis.py
api-shared/src/api_shared/utils/: task_status_manager.py  test_tokens.py  worker_lifespan.py
api-shared/tests/: test_dummy.py
api-template-shared/: pyproject.toml
api-template-shared/src/api_template_shared/: broker.py  main.py  telemetry.py
api-template-shared/src/api_template_shared/core/: settings.py
api-template-shared/src/api_template_shared/tasks/: complex_task.py  dummy.py  failing_task.py  redis.py
api-workers/: .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml
api-workers-general/: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
api-workers-general/src/worker/: broker.py  main.py  runner.py
api-workers-general/src/worker/core/: settings.py
api-workers-general/src/worker/tasks/: complex_task.py  failing_task.py  pydantic_parse_task.py
api-workers-general/tests/: test_hatchet_task_logic.py
api-workers-ml/: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
api-workers-ml/src/worker/: broker.py  main.py
api-workers-ml/src/worker/core/: settings.py
api-workers-ml/src/worker/tasks/: ml_inference.py  ml_training.py
api-workers-ml/tests/: conftest.py  test_hatchet_task_logic.py
api-workers/src/worker/: broker.py  main.py
api-workers/src/worker/core/: telemetry.py
api-workers/src/worker/tasks/: complex_task.py  failing_task.py  pydantic_parse_task.py  redis.py
app/: __main__.py  lifespan.py  log.py  main.py
app/api/: application.py  docs.py  health.py  lifespan.py  router.py
app/api/api_v1/: api.py
app/api/auth/: deps.py  utils.py  views.py
app/api/echo/: schemas.py  views.py
app/api/items/: deps.py  exceptions.py  models.py  repository.py  schemas.py  service.py  views.py
app/api/redis/: deps.py  utils.py  views.py
app/api/tasks/: deps.py  general.py  ml.py  schemas.py  views.py  workers.py
app/api/users/: deps.py  exceptions.py  models.py  repository.py  schemas.py  service.py  views.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  docs.py  echo.py  items.py  redis.py  users.py
app/api/v2/: api.py
app/api/v2/endpoints/: echo.py
app/common/: base_db_repository.py  base_exceptions.py  base_repository.py  in_memory_repository.py
app/common/base_repositories/: base_db_repository.py  in_memory_repository.py
app/core/: broker.py  config.py  hatchet.py  log.py  security.py  settings.py  telemetry.py
app/db/: base.py  deps.py  utils.py
app/db/migrations/: env.py
app/db/migrations/versions/: 2021-08-16-16-55_2b7380507a71.py  2025-04-23-21-49_4055da6b4d80.py
app/dependencies/: auth.py  repositories.py
app/models/: echo.py  item.py  user.py
app/repositories/: item_repository.py  user_repository.py
app/scripts/: placeholder.py
app/services/: item_service.py  user_service.py
app/utils/: general.py
app/worker/: broker.py  main.py  middlewares.py
app/worker/tasks/: complex_task.py  dummy.py  failing_task.py  redis.py
docker/: Dockerfile  entrypoint.sh
docs/: adding-worker-packages.md  authorization.md  depends.md  project_structure.md  repository_pattern.md
docs/Best.Practices/: fastapi-best-practices.md
src/api_template/: __init__.py  placeholder.py
src/api_template/loggers/: filters.py  setup.py
src/api_template/loggers/configs/: default.py
tests/: conftest.py  test_placeholder.py
tests/api/: __init__.py  conftest.py  test_auth.py  test_echo.py  test_health.py  test_items.py  test_redis.py  test_tasks_hatchet.py  test_users.py
tests/api/auth/: test_auth.py  test_utils.py
tests/api/v1/: test_auth.py
tests/api/v2/: test_echo.py
tests/test_core/: __init__.py  test_security.py
tests/test_utils/: __init__.py  test_general.py
tests/worker/tasks/: test_dummy.py
ui/: .gitignore  Makefile  pyproject.toml
workers/: Makefile  pyproject.toml
workers/src/worker/: broker.py  main.py  telemetry.py
workers/src/worker/core/: settings.py
workers/src/worker/tasks/: complex_task.py  dummy.py  failing_task.py  redis.py
