[project]
name = "worker"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "taskiq[opentelemetry]>=0.12.1",
    "taskiq-aio-pika>=0.4.1",
    # "taskiq-fastapi>=0.3.4",
    # "taskiq-dashboard>=0.4.0rc0",
    "taskiq-redis>=1.0.4",
    "pydantic-settings>=2.8.1",
    "pandas>=3.0.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
]

[build-system]
requires = ["uv_build>=0.9,<0.14"]
build-backend = "uv_build"
