[project]
name = "worker"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "api-template-shared",
    "pandas>=3.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.0.1",
    "ruff>=0.12.2",
]

test = [
    "anyio>=4.8.0",
    "fakeredis>=2.27.0",
    "pytest-cov>=5.0.0",
    "pytest-env>=1.1.5",
    "pytest-rerunfailures>=14.0",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.3",
]

[tool.uv]
default-groups = ["dev", "test"]
workspace = { members = ["../api-template-shared"] }


[tool.uv.sources]
api-template-shared = { workspace = true }

[build-system]
requires = ["uv_build>=0.9,<0.14"]
build-backend = "uv_build"
